# swms

./: README.md
dam-fe/: index.html  package.json  tsconfig.json  vite.config.ts
dam-fe/public/: index.html
dam-fe/src/: index.css  index.tsx
dam-fe/src/App/: App.test.tsx  App.tsx
dam-fe/src/components/: Breadcrumbs.tsx  ConfirmDialog.tsx  CustomDialog.tsx  CustomFab.tsx  EmailTextField.tsx  Error.tsx  Header.tsx  ImageListItem.tsx  ImagePreview.tsx  ImageThumbnail.tsx  Loading.tsx  RenditionDialog.tsx  RenditionsAccordion.tsx  RoleSelect.tsx  Router.tsx  Search.tsx  SelectUsers.tsx  SemiEditableTextField.test.tsx  SemiEditableTextField.tsx  Thumbnail.tsx  Typeahead.tsx  WorkspaceFab.tsx  index.ts
dam-fe/src/components/Header/: Menu.tsx  index.tsx  menuData.ts  menuData.tsx
dam-fe/src/components/dialogs/: DeleteFolderDialog.tsx  DeleteImageDialog.tsx  DeleteItemDialog.tsx  DeleteProjectDialog.tsx  ErrorDialog.tsx  NewImageDialog.tsx  RenditionDialog.tsx  WIPDialog.tsx  index.ts
dam-fe/src/components/misc/: SaveButtonContent.tsx  index.ts
dam-fe/src/components/rendition/: Accordion.tsx  Item.tsx  index.ts
dam-fe/src/hooks/: useAPI.tsx  useImageURL.ts
dam-fe/src/models/: CreateUserPayload.ts  Dialog.ts  Folder.ts  Image.ts  ImageThumbnailModel.tsx  LinkModel.tsx  MenuItem.ts  Project.tsx  ProjectListItemModel.tsx  Rendition.ts  Role.ts  SelectUserModel.ts  Session.ts  ThumbnailExtendProps.tsx  ThumbnailItemModel.tsx  UploadImage.ts  User.ts  UserListing.ts  UserPermissions.ts  UserRole.ts  index.ts
dam-fe/src/models/props/: BreadcrumbProps.tsx  README.md
dam-fe/src/pages/: Home.tsx
dam-fe/src/pages/admin/: Admin.tsx
dam-fe/src/pages/workspace/: Workspace.tsx  WorkspaceFab.tsx  WorkspaceMenu.tsx  WorkspaceTopRow.tsx
dam-fe/src/store/: index.ts
dam-fe/src/store/admin/: AdminState.ts  AdminStore.ts
dam-fe/src/utils/: PathUtils.ts  PathUtils.tsx  debounce.ts  misc.ts  test-utils.tsx  token.ts  validations.ts
db-designs/general/: ER.drawio  ddl.md
db-designs/mysql/: cts.sql  ddl.sql  dml.sql
image-api/: .gitignore  Cargo.toml  build.rs  log4rs.yml
image-api/src/: api.rs  authtools.rs  db.rs  error.rs  log_config.rs  main.rs  server_state.rs
image-api/src/api/: echo.rs  image.rs  mod.rs
image-api/src/api/admin/: auth.rs  folder.rs  image.rs  mod.rs  project.rs  rendition.rs  role.rs  user.rs
image-api/src/api/service/: mod.rs  path.rs  remove.rs
image-api/src/auth/: mod.rs  pwd_hash.rs  token.rs  utils.rs
image-api/src/db/: dbcontext.rs  mod.rs
image-api/src/db/adapters/: mysql.rs
image-api/src/db/dao/: dao.rs  factory.rs
image-api/src/db/utils/: mysql.rs
image-api/src/model/: encoding.rs  error.rs  folder.rs  image.rs  item.rs  mod.rs  project.rs  rendition.rs  role.rs  upload_image.rs  user.rs  user_listing.rs  user_permissions.rs  user_search.rs
image-api/src/repository/: image.rs  image_old.rs  item.rs  metadata.rs  mod.rs  rendition.rs  repository.rs  user.rs
image-api/src/repository/folder/: mod.rs
image-api/src/repository/folder/db/: mysql.rs
image-api/src/repository/image/: encoding.rs  mod.rs
image-api/src/repository/image/db/: mod.rs  mysql.rs
image-api/src/repository/project/: mod.rs
image-api/src/repository/project/db/: mysql.rs
image-api/src/repository/rendition/: mod.rs
image-api/src/repository/rendition/db/: mysql.rs
image-api/src/repository/role/: mod.rs
image-api/src/repository/role/db/: mod.rs  mysql.rs
image-api/src/repository/user/: mod.rs
image-api/src/repository/user/db/: mysql.rs
image-api/src/server/: config.rs  db.rs  mod.rs
image-api/src/structs/: image.rs  metadata.rs  rendition.rs
scripts/wt/: README.md  dev.bat
(+22 files in other folders)
