[package]
name = "image-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-static-files = "4.0"
actix-multipart = "0.4.0"
actix-form-data = "0.6.2"
static-files = "0.2.1"
futures = "0.3.21"
raster = "0.2.0"
mysql = "22.2.0"
chrono = "0.4"
num-traits = "0.2"
num-derive = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
default-features = false

[build-dependencies]
static-files = "0.2.1"
