[package]
name = "image-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-static-files = "4.0"
actix-multipart = "0.4.0"
actix-form-data = "0.6.2"
actix-cors = "0.6.3"
static-files = "0.2.1"
futures = "0.3.21"
raster = "0.2.0"
mysql = "22.2.0"
chrono = { version = "0.4", features = [ "serde" ] }
num-traits = "0.2"
num-derive = "0.2"
cached = "0.39.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
argon2 = "0.4.1"
qstring = "0.7.2"
regex = "1.7.0"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"

#actix-session = { version = "0.8.0", features = [ "cookie-session" ] }
#actix-identity = "0.6.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
default-features = false

[build-dependencies]
static-files = "0.2.1"
