[package]
name = "image-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
actix-web-static-files = "4.0.1"
actix-multipart = "0.6.1"
actix-form-data = "0.6.2"
actix-cors = "0.7"
static-files = "0.2.3"
futures = "0.3.21"
raster = "0.2.0"
mysql = "25.0.1"
mysql_common = { version = "0.32.3", features = [ "chrono" ] }
chrono = { version = "0.4.38", features = [ "serde" ] }
num-traits = "0.2"
num-derive = "0.2"
cached = "0.39.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
argon2 = "0.4.1"
qstring = "0.7.2"
regex = "1.7.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
log = "0.4.20"
dirs-next = "2.0.0"
serde_yaml = "0.9.25"

[dependencies.log4rs]
version = "1.2.0"
features = [
    "gzip",
    "background_rotation",
    "console_appender",
    "size_trigger",
    "fixed_window_roller",
    "rolling_file_appender"
]

#log4rs = { version = "1.2.0", features = [ "gzip", "background_rotation", "console_appender", "size_trigger", "fixed_window_roller", "rolling_file_appender" ] }

#actix-session = { version = "0.8.0", features = [ "cookie-session" ] }
#actix-identity = "0.6.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
default-features = false

[build-dependencies]
static-files = "0.2.1"
